.metadata/.plugins/org.eclipse.cdt.ui/0-led-driver.build.log
20:49:45 **** Incremental Build of configuration Debug for project 0-led-driver ****
make -j18 all 
arm-none-eabi-gcc "../Src/led.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DNUCLEO_F411RE -DSTM32 -DSTM32F4 -DSTM32F411RETx -c -I../Inc -I"/home/aakash/RTOS/CUBE_IDE/0-led-driver/Include" -I/home/aakash/RTOS/Device/ST/STM32F4xx/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/led.d" -MT"Src/led.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/led.o"
In file included from ../Inc/led.h:4,
                 from ../Src/led.c:1:
/home/aakash/RTOS/Device/ST/STM32F4xx/Include/stm32f4xx.h:174:2: error: #error "Please select first the target STM32F4xx device used in your application (in stm32f4xx.h file)"
  174 | #error "Please select first the target STM32F4xx device used in your application (in stm32f4xx.h file)"
      |  ^~~~~
make: *** [Src/subdir.mk:28: Src/led.o] Error 1
"make -j18 all" terminated with exit code 2. Build might be incomplete.

20:49:45 Build Failed. 2 errors, 0 warnings. (took 91ms)

